--- a/Reproducible_Research_proj1.Rmd
+++ b/Reproducible_Research_proj1.Rmd
@@ -155,7 +155,8 @@ print(median_steps_new_df)
 
 
 
-Do these values differ from # the estimates from the first part of the assignment? There is insignificant difference. When we replacing the NA values we got a increase about number of days but insignificant difference between previous values of mean and median
+Do these values differ from # the estimates from the first part of the assignment?
+There is insignificant difference. When I was replacing the NA values I got an increase about number of days but insignificant difference between previous values of mean and median
 
 What is the impact of inputing missing data on the estimates of the total daily number of steps? The number of days increased.
 
